[package]
name = "bitlight-local-env"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
tokio = { version = "1.37.0", features = ["full"] }
serde_json = "1.0"
bdk = { version = "0.29.0", features = ["esplora-client", "use-esplora-blocking", "keys-bip39"] }
commit_verify = "0.11.0-beta.5"
strict_encoding = "2.7.0-beta.3"
strict_types = "2.7.0-beta.3"
bp-core = "0.11.0-beta.5"
bp-seals = "0.11.0-beta.5"
bp-std = "0.11.0-beta.5"
bp-electrum = "0.11.0-beta.5"
bp-esplora = "0.11.0-beta.5"
descriptors = "0.11.0-beta.5"
psbt = { version = "0.11.0-beta.5", features = ["client-side-validation"] }
bp-wallet = { version = "0.11.0-beta.5" , features = ["all"]}
rgb-std = { version = "0.11.0-beta.5", features = ["fs"] }
rgb-interfaces = "0.11.0-beta.5"
rgb-runtime = { git = "https://github.com/eauxxs/rgb", branch = "dev" }

[dev-dependencies]
assert_cmd = "2.0"

[patch.crates-io]
strict_encoding = { git = "https://github.com/strict-types/strict-encoding", branch = "develop" }
strict_types = { git = "https://github.com/strict-types/strict-types", branch = "develop" }
commit_verify = { git = "https://github.com/LNP-BP/client_side_validation", branch = "develop" }
single_use_seals = { git = "https://github.com/LNP-BP/client_side_validation", branch = "develop" }
bp-consensus = { git = "https://github.com/BP-WG/bp-core", branch = "master" }
bp-dbc = { git = "https://github.com/BP-WG/bp-core", branch = "master" }
bp-seals = { git = "https://github.com/BP-WG/bp-core", branch = "master" }
bp-core = { git = "https://github.com/BP-WG/bp-core", branch = "master" }
bp-invoice = { git = "https://github.com/BP-WG/bp-std", branch = "develop" }
bp-derive = { git = "https://github.com/BP-WG/bp-std", branch = "develop" }
bp-std = { git = "https://github.com/BP-WG/bp-std", branch = "develop" }
bp-wallet = { git = "https://github.com/BP-WG/bp-wallet", branch = "develop" }
psbt = { git = "https://github.com/BP-WG/bp-std", branch = "develop" }
descriptors = { git = "https://github.com/BP-WG/bp-std", branch = "develop" }
aluvm = { git = "https://github.com/AluVM/rust-aluvm", branch = "develop" }
rgb-core = { git = "https://github.com/RGB-WG/rgb-core", branch = "develop" }
rgb-std = { git = "https://github.com/eauxxs/rgb-std", branch = "dev" }
rgb-invoice = { git = "https://github.com/eauxxs/rgb-std", branch = "dev" }
rgb-interfaces = { git = "https://github.com/RGB-WG/rgb-interfaces", branch = "develop" }

